<resources>
    <string name="app_name">TASK</string>
    <string name="myapp">MyApp</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="have_an_account">Already have an account?</string>
    <string name="dont_have_an_account">Don\'t  have an account?</string>
    <string name="welcome">Welcome</string>
    <string name="first_fragment">First Fragment</string>
    <string name="second_fragment">Second Fragment</string>
</resources>